@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-27T01:22:24Z",
+  "timestamp" : "2024-05-27T12:35:39Z",
   "count_outdated" : 7685,
   "uniques_outdated" : 3340,
-  "count" : 7812,
-  "uniques" : 3430,
+  "count" : 7813,
+  "uniques" : 3431,
   "clones" : [
     {
       "timestamp": "2024-05-13T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
