@@ -1,5 +1,5 @@
 {
-  "count": 127,
+  "count": 128,
   "uniques": 66,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2024-05-26T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
